# ex-rust-actix-web-clean-architecture

./: .env.example  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/config/: config.rs
src/controllers/: health_check.rs  mod.rs
src/controllers/auth_controller/: login.rs  register.rs
src/controllers/dto/: auth.rs  user.rs
src/controllers/user_controller/: get_user.rs  mod.rs  update_user.rs
src/domain/: app_state.rs  error.rs  mod.rs
src/domain/models/: auth.rs  mod.rs  user.rs
src/domain/repositories/: user.rs
src/domain/services/: auth.rs  user.rs
src/extractor/: user.rs
src/infrastructure/models/: user.rs
src/infrastructure/repositories/: user.rs
src/middleware/: jwt.rs
src/services/: auth.rs  user.rs
src/utils/: hash_password.rs  jwt.rs  mod.rs
