[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-trait = "0.1.83"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-async-std-native-tls"] }
validator = { version = "0.19.0", features = ["derive"] }
